# SheenFigure

./: .gitattributes  .gitignore  .travis.yml  Makefile  README.md  SheenFigure.vcxproj  SheenFigure.vcxproj.filters  meson.build
.ci/: libs.sh
Headers/: SFAlbum.h  SFArtist.h  SFBase.h  SFConfig.h  SFDirection.h  SFFeature.h  SFFeatureTag.h  SFFont.h  SFLanguage.h  SFLanguageTag.h  SFPattern.h  SFScheme.h  SFScript.h  SFScriptTag.h  SFTypes.h  SheenFigure.h
SheenFigure.xcodeproj/: project.pbxproj
SheenFigure.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
SheenFigure/Headers/: SFAlbum.h  SFArtist.h  SFBase.h  SFConfig.h  SFDirection.h  SFFeatureTag.h  SFFont.h  SFLanguageTag.h  SFPattern.h  SFScheme.h  SFScriptTag.h  SFTypes.h  SheenFigure.h
SheenFigure/Source/: SFAlbum.c  SFAlbum.h  SFArabicEngine.c  SFArabicEngine.h  SFArtist.c  SFArtist.h  SFAssert.h  SFBase.c  SFBase.h  SFCodepoints.c  SFCodepoints.h  SFCommon.c  SFCommon.h  SFData.h  SFFont.c  SFFont.h  SFFontCache.c  SFFontCache.h  SFGDEF.h  SFGPOS.h  SFGSUB.h  SFGeneralCategory.h  SFGeneralCategoryLookup.c  SFGeneralCategoryLookup.h  SFGlyphDiscovery.c  SFGlyphDiscovery.h  SFGlyphManipulation.c  SFGlyphManipulation.h  SFGlyphPositioning.c  SFGlyphPositioning.h  SFGlyphSubstitution.c  SFGlyphSubstitution.h  SFGlyphTraits.h  SFJoiningType.h  SFJoiningTypeLookup.c  SFJoiningTypeLookup.h  SFList.c  SFList.h  SFLocator.c  SFLocator.h  (+18 more)
SheenFigureGenerator.xcodeproj/: project.pbxproj
SheenFigureParser.xcodeproj/: project.pbxproj
SheenFigureParser.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
SheenFigureTester.xcodeproj/: project.pbxproj
SheenFigureTester.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
SheenFigureWorkspace.xcworkspace/: contents.xcworkspacedata
Source/: AATProcessor.c  AATProcessor.h  ArabicEngine.c  ArabicEngine.h  Common.h  Data.h  GDEF.h  GPOS.h  GSUB.h  GlyphDiscovery.c  GlyphDiscovery.h  GlyphManipulation.c  GlyphManipulation.h  GlyphPositioning.c  GlyphPositioning.h  GlyphSubstitution.c  GlyphSubstitution.h  List.c  List.h  Locator.c  Locator.h  OpenType.c  OpenType.h  SFAlbum.c  SFAlbum.h  SFArabicEngine.c  SFArabicEngine.h  SFArtist.c  SFArtist.h  SFAssert.h  SFBase.c  SFBase.h  SFCodepoints.c  SFCodepoints.h  SFCollection.c  SFCollection.h  SFCommon.c  SFCommon.h  SFData.h  SFFont.c  (+67 more)
Source/Tables/: AAT.c  AAT.h  GDEF.h  GPOS.h  GSUB.h  Morx.h  OpenType.c  OpenType.h  Variations.c  Variations.h
Tools/Generator/: GeneralCategoryLookupGenerator.cpp  GeneralCategoryLookupGenerator.h  JoiningTypeLookupGenerator.cpp  JoiningTypeLookupGenerator.h  main.cpp
Tools/Parser/: ArabicShaping.cpp  ArabicShaping.h  Makefile  UnicodeData.cpp  UnicodeData.h
Tools/Tester/: AlbumTester.cpp  AlbumTester.h  FontTester.cpp  FontTester.h  GeneralCategoryLookupTester.cpp  GlyphDiscovererTester.h  (+25 more)
subprojects/: sheenbidi.wrap
(+32 files in other folders)
